--- a/data_manipulation_with_dplyr.Rmd
+++ b/data_manipulation_with_dplyr.Rmd
@@ -14,6 +14,10 @@ knitr::opts_chunk$set(
   )
 ```
 
+# Cleaning
+
+### Select columns 
+
 Once you've import the data, you're going to need to do some cleaning up. 
 
 ```{r}
@@ -43,9 +47,112 @@ select(litters_data,group,litter_number, gd0_weight,pups_born_alive)
 #select a range of variables 
 select(litters_data, group:gd_of_birth)
 ```
+You can also specify columns of you'd like to remove
+
+```{r}
+select(litters_data,-pups_survive)
+
+select(litters_data,-pups_survive,-group)
+
+```
+
+You can rename variables as part of this process
+```{r}
+select(litters_data,GROUP=group, LiTtEr_NuMbEr=litter_number)
+```
+
+only rename the variable and keep all of the variables. 
+```{r}
+rename(litters_data,GROUP=group, LiTtEr_NuMbEr=litter_number)
+```
+
+start_with() ends_with() and contains()
+
+```{r}
+#View(litters_data)
+
+select(litters_data,starts_with("gd"))
+select(litters_data,ends_with("th"))
+
+```
+
+
+Change the ordering, take litters_data and litter_number to the front. Everything() will grab the other variables.
+```{r}
+select(litters_data, litter_number,pups_survive,everything())
+```
+
+### Select Rows (Filter)
+
+">,>=,<,<=,== and !="
+
+'%in%', 'is.na()'
+
+group %in% c("Con7","Con8") (useful for character variable) 
+
+* drop_na(litters_data) remove any row with a missing value
+
+* drop_na(litters_data, wt_increase) will remove rows for which 'wt_increase' is missing
+
+
+
+### 'mutate' (create variable)
+```{r}
+#create a new variable called wt_gain
+
+#litter_data2 = 
+mutate(litters_data,wt_gain = gd18_weight - gd0_weight, group = str_to_lower(group),
+#wt_gain_kg=wt_gain*2.2
+)
+
+```
+
+### arrange
+
+arrange the rows in your data according to the values in one or more columns. 
+
+```{r}
+#sort first on group, then on pups_born_alive
+head(arrange(litters_data,group, pups_born_alive),10)
+
+
+#decending order
+head(arrange(litters_data,desc(group), pups_born_alive),10)
+```
 
 
 ```{r}
+litters_data_raw = read_csv("./data/FAS_litters.csv")
 
 ```
+
+
+
+### Piping %>%
+```{r}
+litters_data = 
+  read_csv("./data/FAS_litters.csv",col_types = 'ccddiiii') %>%
+  janitor::clean_names() %>%
+  select(-pups_survive) %>%
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    group = str_to_lower(group)) %>%
+  drop_na(wt_gain)
+  
+  
+litters_data
+```
+
+```{r}
+#can use nontidyverse function as long as specified the starting?
+
+litters_data %>%
+  lm(wt_gain=pups_born_alive,data=.) %>%
+  broom::tidy()
+```
+
+
+
+
+
 
