--- a/data_tidying.Rmd
+++ b/data_tidying.Rmd
@@ -102,6 +102,83 @@ analysis_result = tibble(
 view(analysis_result)
 ```
 
+change into wide format. split a column into columns with respect to names in the column. 
+
+```{r}
+
+analysis_result_wide = pivot_wider(
+  analysis_result, 
+  names_from = "time", 
+  values_from = "mean")
+```
+
+
+
+```{r}
+fellowship_ring = 
+  readxl::read_excel("./data/LotR_Words.xlsx", range = "B3:D6") %>%
+  mutate(movie = "fellowship_ring")
+
+two_towers = 
+  readxl::read_excel("./data/LotR_Words.xlsx", range = "F3:H6") %>%
+  mutate(movie = "two_towers")
+
+return_king = 
+  readxl::read_excel("./data/LotR_Words.xlsx", range = "J3:L6") %>%
+  mutate(movie = "return_king")
+```
+
+```{r}
+# all the columns in three dataframe have the same name, so can bind rows. 
+lotr_tidy = 
+  bind_rows(fellowship_ring, two_towers, return_king) %>%
+  janitor::clean_names() %>%
+  # bind to the column
+  pivot_longer(
+    female:male,
+    names_to = "gender", 
+    values_to = "words") %>%
+  mutate(race = str_to_lower(race)) %>%  
+  select(movie, everything()) 
+```
+
+
+# Joining Dataframe
+```{r}
+pups = read_csv('./data/FAS_pups.csv')  %>%
+  janitor::clean_names() %>%
+  mutate(sex=recode(sex, '1'='male', '2'='female'),
+  sex = factor(sex))
+  
+```
+
+
+```{r}
+pup_data = 
+  read_csv("./data/FAS_pups.csv") %>%
+  janitor::clean_names() %>%
+  mutate(
+    sex = recode(sex, `1` = "male", `2` = "female"),
+    sex = factor(sex)) 
+
+litter_data = 
+  read_csv("./data/FAS_litters.csv") %>%
+  janitor::clean_names() %>%
+  separate(group, into = c('dose',"day_of_tx"), sep = 3) %>%
+  relocate(litter_number) %>%
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    dose = str_to_lower(dose))
+view(litter_data)
+```
+
+
+
+```{r}
+fas_data = left_join(pup_data, litter_data,by='litter_number')
+```
+
+
 
 
 
